syntax = "proto3";

import "google/protobuf/timestamp.proto";

package user;

message User {
  string id = 1;
  string name = 2;
  int64 age = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}


service UserService {
  rpc GetUser(GetUserRequest) returns (User) {}
  rpc GetAllUsers(GetAllUsersRequest) returns (stream User) {}
}

message GetUserRequest {
  string username = 1;
}

message GetAllUsersRequest {
  string username = 1;
  int64 age = 2;
}